adds filter functionality, has errors for fitlers for Studio, Director, and Collection
